--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 8 demo 1</title>
+    <title>Lab 3</title>
     <!-- mapbox GL JS -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.css' rel='stylesheet' />
@@ -27,6 +27,13 @@
 
     <!-- MAP CONTAINER -->
     <div id='map' class='map-container'></div>
+
+    <div id='popn-legend' class='legend'>
+        <h4>Units within the building</h4>
+        <div><span></span>1</div> 
+        <div><span></span>2</div>
+        <div><span></span>3</div>
+    </div>
 
     <script src="script.js"></script>
 </body>
