--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
     <div id='map' class='map-container'></div>
 
     <div id='popn-legend' class='legend'>
-        <h4>Units within the building</h4>
+        <h4>Number of Listings</h4>
         <div><span></span>1</div> 
         <div><span></span>2</div>
         <div><span></span>3</div>
+        <div><span></span>4</div>
+        <div><span></span>5</div>
+        <div><span></span>10+</div>
+
     </div>
 
     <script src="script.js"></script>
