Finished map interaction

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 
     </div>
 
+    <div class = 'title'>
+        <h2>Rental Listings in Toronto</h2>
+        <p>Click on the blue dot to see the listing information</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
