Added code comments

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- MAP CONTAINER -->
     <div id='map' class='map-container'></div>
-
+    <!-- MAP Legend -->
     <div id='popn-legend' class='legend'>
         <h4>Number of Listings</h4>
         <div><span></span>1</div> 
@@ -38,7 +38,7 @@
         <div><span></span>10+</div>
 
     </div>
-
+    <!-- Map Title with short descirption -->
     <div class = 'title'>
         <h2>Rental Listings in Toronto</h2>
         <p>Click on the blue dot to see the listing information</p>
